after long time fixed some bugs

--- a/frontend/src/components/Home/Header.scss
+++ b/frontend/src/components/Home/Header.scss
@@ -1,17 +1,17 @@
-::-webkit-scrollbar {
-  width: 8px;
-}
-::-webkit-scrollbar-track {
-  background: #e4b8ff;
-  border-radius: 10px;
-}
-::-webkit-scrollbar-thumb {
-  background: #8b00ae;
-  border-radius: 10px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: #dc4fff;
-}
-::-webkit-scrollbar-thumb:active {
-  background: #7474ff;
-}
+// ::-webkit-scrollbar {
+//   width: 8px;
+// }
+// ::-webkit-scrollbar-track {
+//   background: #e4b8ff;
+//   border-radius: 10px;
+// }
+// ::-webkit-scrollbar-thumb {
+//   background: #8b00ae;
+//   border-radius: 10px;
+// }
+// ::-webkit-scrollbar-thumb:hover {
+//   background: #dc4fff;
+// }
+// ::-webkit-scrollbar-thumb:active {
+//   background: #7474ff;
+// }
